# Crawler

./: .env.dist  .gitignore  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: ef876a8cd302_add_tables.py
src/searcher/: application.py  crawler.py  models.py  routes_collection.py  settings.py
src/searcher/clients/: request_client.py
src/searcher/connection_managers/: postgres_connection_manager.py
src/searcher/core/: container.py  logger.py
src/searcher/helpers/: page_parser_helper.py  url_helper.py
src/searcher/services/: page_service.py
