[tool.poetry]
name = "searcher"
version = "0.1.0"
description = ""
authors = ["Alexandr Kiselev <aakiselev@web-zaim.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
gino = "^1.0.1"
aiohttp = "^3.7.3"
injector = "^0.18.4"
pydantic = {extras = ["dotenv"], version = "^1.7.2"}
bs4 = "^0.0.1"
alembic = "^1.4.3"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
